css/style.css
/* ... */
.section__subtitle--intro,
.section__subtitle--about {
  background: var(--clr-accent);
  padding: .25em 1em;
  font-family: var(--ff-secondary);
  margin-block: 1em;
}

.section__subtitle--work {
  color: var(--clr-accent);
  font-weight: var(--fw-bold);
  margin-bottom: 1em;
}


/* Header */

header {
  position: sticky;
  /* mix-blend-mode: difference; */
  background-color: var(--clr-body);
  transition: background-color 350ms cubic-bezier(.5, 0, .5, 1);
  top: 0;
  display: flex;
  justify-content: space-between;
  padding: 1em;
  max-width: 1200px;
  margin: 0 auto;
  z-index: 10;
}

/* .logo {
  max-width: 100px;
} */

.text-logo {
  -webkit-text-stroke-width: .5px;
  -webkit-text-fill-color: var(--clr-body);
  color: var(--clr-dark);
  opacity: .8;
  position: relative;
  transition: text-shadow 300ms cubic-bezier(.5, 0, .5, 1), text-stroke-width 2s;
}
.text-logo:hover {
  -webkit-text-stroke-width: 0;
  text-shadow: var(--darkShadow),
               var(--lightShadow);
}
.logo a {
  text-decoration: none;
}

.nav {
  position: fixed;
  background: var(--clr-body);
  color: var(--clr-dark);
  inset: 0;
  z-index: 100;

  transform: translateX(100%);
  transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
}

.nav__list {
  list-style: none;
  display: flex;
  gap: 3em;
  height: 100%;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
}

.nav__link {
  color: inherit;
  font-weight: var(--fw-bold);
  font-size: var(--fs-h3);
  transition: color 250ms ease-out, font-size 200ms;
}

.nav__link:hover {
  font-size: var(--fs-h1);
  -webkit-text-stroke-width: 2px;
  -webkit-text-fill-color: var(--clr-body);
  color: var(--clr-dark);

}



.nav-toggle {
  padding: 1em .8em;
  background: transparent;
  border: none;
  cursor: pointer;
  position: absolute;
  right: 0;
  top: 1em;
  z-index: 500;
}
@media (min-width: 820px) {
  .nav-toggle {
    top: 1.4em
  }
  .settings-option {
    right: -3em;
  }
}

.nav-open .intro,
.nav-open .my-services {
  width: 100vw;
  opacity: 0;
  transition: opacity 0 ease-out;
}
.nav-open {
  position: fixed;
}

.nav-open .nav{
  transform: translateX(0);
}

.nav-open .hamburger {
  transform: rotate(45deg);
  background: var(--clr-dark);
}

.nav-open .hamburger::before {
  transform:  rotate(90deg) translateX(-9px);
  background: var(--clr-dark);
}

.nav-open .hamburger::after {
  opacity: 0;
}


/* Hamburger */
.hamburger {
  display: block;
  position: relative;
  transition: transform 250ms;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  background: var(--clr-dark);
  width: 2em;
  height: 3px;
  border-radius: 1px;
  transition: transform 250ms, 
              opacity 250ms, 
              background-color 250ms ;
}

.hamburger::before,
.hamburger::after {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
}

.hamburger::before { top: 9px }
.hamburger::after { bottom: 9px }


/* Intro section */

.intro {
  position: relative;
  /* top: -5vh; */
  text-align: center;
}

.intro__img {
  box-shadow: var(--bs);
  margin: 0 auto;
  width: 100%;
  max-width: 250px;
}

.section__subtitle--intro {
  display: inline-block;
}


/* My services */

.my-services {
  text-align: center;
  background: var(--clr-body) url("../img/services-bg.jpg" ) no-repeat;
  background-size: cover;
  color: var(--clr-light);

  display: flex;
  flex-direction: column;
  align-items: center;

}

.section__title--services::after {
  content: '';
  display: block;
  width: 95px;
  height: 1px;
  margin: 1em auto 0;

  background-color: var(--clr-light);
  opacity: .25;
}

.services {
  display: flex;
  gap: 25px;
  justify-content: center;
  flex-direction: column;

  max-width: 1120px;
  margin-bottom: 4em;
}

.section__title--services {
  color: var(--clr-accent);
  margin-bottom: 1.2em;
}

.service{
  min-width: 300px;
  max-width: 350px;
}


@media (min-width: 970px) {
  .services {
    flex-direction: row;
  }

  .service + .service {
    margin-left: 25px;
  }
}


/* About me */
.about-me {
  padding-block: 1em;
  margin: 0 auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  max-width: 600px;
}

.section__title--about {
  /* margin-block: 1em; */
}

.about-me__img {
  width: 250px;
  max-width: 80%;
  margin: 0 auto;
  order: 4;
  box-shadow: var(--bs);
}

.about-me__body {
  order: 3;
  max-width: 300px;
  margin: 0 auto;
}
@media (min-width: 820px) {
  .about-me {
    text-align: left;
    max-width: 1200px;
    margin: 0 auto;
    
    display: grid;
    grid-template-columns: 1fr 250px;
    grid-column-gap: 2em;
    grid-template-areas: 
            "title img"
            "subtitle img"
            "body img";
  }
  
  .section__title--about {
    grid-area: title;
    margin-block: 0;
  }
  .section__subtitle--about {
    grid-area: subtitle;
    grid-column: -1 / 1;
    grid-row: 2;

    position: relative;
    left: -2em;
    padding-left: 2em;
    padding-right: calc(300px + 2em);
    width: calc(100% + 4em);
  }
  .about-me__body {
    grid-area: body;
    max-width: 900px;
    /* margin-right: 8rem; */
  }
  .about-me__body p {
    margin-top: 0;
  }
  .about-me__img {
    grid-area: img;
    position: relative;
    /* right: 1.5em; */
    z-index: 2;
  }
}


/* My work */
.my-work {
  background-color: var(--clr-body);
  color: var(--clr-dark);
  text-align: center;
}
.section__subtitle--work {
  color: var(--clr-dark);
}

.portfolio {
  display: grid;
  gap: 2em;
  grid-template-columns: repeat(auto-fit, minmax(90%, 1fr));
  max-width: 1100px;
  margin: 0 auto;
}

.portfolio__item {
  overflow: hidden;
  border-radius: 16px;
  /* max-width: 80%; */
  /* margin: 0 auto; */
}

.portfolio__img {
  filter: grayscale(1);
  min-width: 100%;
  transition: transform 650ms cubic-bezier(.5, 0, .5, 1),
  opacity 250ms linear,
  filter 250ms linear;
}

.portfolio__item:focus {
  position: relative;
  z-index: 2;
}
/* ... */

